[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openseize"
version = "1.0.0"
dynamic = ["dependencies"]
authors =[{ name="Matthew Caudill", email="mscaudill@gmail.com" }]
description = "Digital Signal Processing for Big EEG Datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["EEG", "signal processing", "seizure", "DSP", "EDF"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["isort",
    "mypy", 
    "black",
    "pylint", 
    "bumpver", 
    "pre-commit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "pytest", 
    "pytest-cov",
    "pip-tools", 
    "build",
    "twine"
]

[project.urls]
Homepage = "https://github.com/mscaudill/openseize"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 
    'version = "{version}"'
]
"src/openseize/__init__.py" = ["{version}"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["scipy.*", "matplotlib.*"]
ignore_missing_imports = true
