[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openseize"
version = "1.2.0"
authors =[{ name="Matthew Caudill", email="mscaudill@gmail.com" }]
description = "Digital Signal Processing for Big EEG Datasets"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "EEG",
    "signal analysis",
    "digital signal processing",
    "seizure",
    "big data"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "requests",
    "wget",
    "numpy",
    "scipy",
    "matplotlib",
    "ipython",
    "notebook",
    "psutil"
]

[project.optional-dependencies]
dev = ["isort",
    "mypy", 
    "pylint", 
    "bumpver",
    "codespell", 
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "pytest", 
    "pytest-cov",
    "pip-tools", 
    "build",
    "twine"
]
test = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/mscaudill/openseize"

# bumpver configuration
[tool.bumpver]
current_version = "1.2.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = 'bump version {old_version} -> {new_version}'
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 
    'version = "{version}"'
]
"src/openseize/__init__.py" = ['__version__ = "{version}"']

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# 3rd party's without annotations
module = ["scipy.*", "matplotlib.*", "openseize.*"]
ignore_missing_imports = true

# pylint configuration
[tool.pylint.design]
max-attributes = 10
max-args = 10

[tool.pylint.basic]
argument-naming-style = "any"
variable-naming-style = "any"
attr-naming-style = "any"

[tool.isort]
profile = 'google'
line_length = 80

[tool.codespell]
skip = '*.edf,*.json,*.txt,*.npy,*.ipynb'
before-context = 3
after-context = 3
quiet-level = 3
